updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am pursuing my dreams of becoming a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Johnson City, TN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, reading and lounging with my pup.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I am new to this area of study so it is to be determined.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Murfreesboro</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always enjoyed being on and around computers. When the opportunity arose to join this program I jumped on.</p>
     </section>
 
     <footer id="footer">
