updating our details

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Johnson City, TN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Hiking, reading and lounging with my pup.</p>
+      <p>Hiking, photography, reading and lounging with my fur baby.</p>
       <h1>What's your dream job?</h1>
-      <p>I am new to this area of study so it is to be determined.</p>
+      <p>I am new to this field of study so it is to be determined!</p>
       <h1>Where do you live?</h1>
       <p>Murfreesboro</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I've always enjoyed being on and around computers. When the opportunity arose to join this program I jumped on.</p>
+      <p>I've always enjoyed being on and around computers. Learning what goes into the process of creating websites has always been intriguing to me.</p>
     </section>
 
     <footer id="footer">
